--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+*.json
+
+# Terraform Files
+.terraform/
+*.tfstate
+*.tfstate.*
+rash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.tfstate.lock.info
+.terraformrc
+terraform.rc
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
